Fix horizontal overflow in html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700&family=Roboto&family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 
-body {
+body, html {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
     font-family: "Roboto", sans-serif;
-    overflow-x: hidden;
 }
 
+* {
+    box-sizing: inherit;
+}
 /*--------------------------------HEADER--AND LOGO------------*/
 
 header{
@@ -149,6 +154,17 @@ nav div ul.my-nav {
     margin-right: 3%;
     padding: 2px;
 }
+ 
+.modalFormdiv  {
+    text-align: center:
+}
+
+
+.modalForm {
+    font-weight: bold;
+    
+}
+
 
 
 
@@ -308,8 +324,8 @@ nav div ul.my-nav {
     text-align: center;
     font-size: 1.1em;
     margin-bottom: 0;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+    padding-left: 1.0em;
+    padding-right: 1.0em;
     line-height: 1.88em;
     font-weight: 400;
     font-family: 'Roboto Condensed', sans-serif;
@@ -423,8 +439,8 @@ div .sdg-mandate-cover .card a img {
     text-align: center;
     margin-bottom: 0;
     font-size: 1.1rem;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     line-height: 30px;
     font-weight: 400;
     font-family: 'Roboto Condensed', sans-serif;
@@ -450,7 +466,9 @@ div #visionimage {                                               /*---------- GO
 }
 
 div #visionimage {
-     padding: 15%;
+     padding: 5%;
+
+     
  }
 
     .mediaVisioniImage {
@@ -483,7 +501,7 @@ div #visionimage {
                                                 /*---------------------------------------------------------------------------------------------------VISION-IMAGE-------*/
 
 .content-text h3 {
-    padding: 20px;
+    padding: 15px;
     text-transform: capitalize;
     line-height: 25px;
     font-weight: 700;
@@ -522,6 +540,9 @@ div #visionimage {
 }
 /*-------------------------------------------PARTNERSHIP-IMAGE-----------------------------------------------------------PARTNERSHIP-IMAGE-------*/
 
+
+
+
 #whypartnerwithus {
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -550,7 +571,7 @@ div #visionimage {
     padding-left: 1.5rem;
      text-align: center;
     padding-bottom: 0.8rem;
-    padding-right: 1.5em;
+    padding-right: 0.8em;
     font-size: 1.1rem;
     font-style: italic;
      color: #05041a;
@@ -563,8 +584,8 @@ div #visionimage {
     text-align: center;
     font-size: 1.1rem;
     margin-bottom: 0;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     line-height: 30px;
     font-weight: 400;
     font-family: 'Roboto Condensed', sans-serif;
@@ -601,7 +622,8 @@ div .col.content-text {
 
 
 .partnershipimages {
-     padding: 11%;
+     padding: 5%;
+    
  }
 
 
@@ -694,16 +716,18 @@ div .col.content-text {
     color: #ffffff;
     text-align: center;
     margin-bottom: 0;
-    padding-left: 1.5em;
+    padding-left: 1em;
     padding-bottom: 10px;
-    padding-right: 1.5em;
+    padding-right: 1em;
     font-size: 1.1em;
+    line-height: 30px;
     font-weight: 400;
     font-family: 'Roboto Condensed', sans-serif;
     font-style: italic;
 }
 .support-parag h3 {
     text-align: center;
+    line-height: 30px;
   }
 
 
